2007-09-01  Mathias Hasselmann  <mathias.hasselmann@gmx.de>

	* vapi/packages/gtk+-2.0/gtk+-2.0.metadata:
	  gtk_init_with_args.entries as array
	* vapi/packages/pango/pango.metadata:
	  mark PangoLogAttr as value type
	* vapi/gtk+-2.0.vala, vapi/pango.vala:
	  regenerated

2007-09-01  Jürg Billeter  <j@bitron.ch>

	* vala/valaclass.vala, vala/valadatatype.vala, vala/valainterface.vala,
	  vala/valasemanticanalyzer.vala, gobject/valacodegenerator.vala,
	  gobject/valacodegeneratorassignment.vala: let DataType.is_subtype_of
	  return true if the specified type is the same

2007-09-01  Jürg Billeter  <j@bitron.ch>

	* doc/vala/types.xml: add introduction to data types

2007-09-01  Jürg Billeter  <j@bitron.ch>

	* vala/valatrystatement.vala: visit finally body, fixes bug 467919

2007-09-01  Jürg Billeter  <j@bitron.ch>

	* configure.ac: add xsltproc as optional dependency
	* doc/vala/: add initial structure for the Vala Reference Manual, will
	  be built and installed if xsltproc is available
	* tests/hello.exp, tests/hello.vala: add hello world test case
	* doc/Makefile.am, tests/Makefile.am: updated

2007-09-01  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: check arguments of methods with
	  ellipsis parameters

2007-08-31  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: improve error reporting for
	  expression, while, and for statements and for parenthesized
	  expressions

2007-08-31  Jürg Billeter  <j@bitron.ch>

	* configure.ac: Post-release version bump

2007-08-31  Jürg Billeter  <j@bitron.ch>

	* NEWS: update for 0.1.3 release

2007-08-31  Jürg Billeter  <j@bitron.ch>

	* doc/Makefile.am: only install man pages for vapigen and gidlgen if
	  vapigen is enabled

2007-08-31  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: fix binding provider support

2007-08-31  Jürg Billeter  <j@bitron.ch>

	* gobject/valacodegenerator.vala, gobject/valacodegeneratormethod.vala: