@@ -1,6 +1,8 @@
 Pango cheader_filename="pango/pango.h"
 pango_attr_size_new_absolute hidden="1"
-PangoLogAttr is_value_type="1"
 PangoColor is_value_type="1"
+pango_get_log_attrs.log_attrs is_array="1"
+pango_glyph_item_letter_space.log_attrs is_array="1"
+PangoLogAttr is_value_type="1"
 PangoMatrix is_value_type="1"
 PangoRectangle is_value_type="1"
